--- a/Dependencies/Dependencies.csproj
+++ b/Dependencies/Dependencies.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="log4net" Version="2.0.14" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
@@ -23,8 +24,7 @@
 
   <ItemGroup>
     <Folder Include="BringMethodUnderTest\ExtractAndOverride\Lab\" />
-    <Folder Include="BringMethodUnderTest\ExtractMethod\" />
-    <Folder Include="BringMethodUnderTest\PassNull\" />
+    <Folder Include="BringMethodUnderTest\IntroduceStaticSetter\" />
   </ItemGroup>
 
 </Project>
