--- a/Dependencies/Dependencies.csproj
+++ b/Dependencies/Dependencies.csproj
@@ -5,12 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BringMethodUnderTest\IntroduceStaticSetter\**" />
+    <EmbeddedResource Remove="BringMethodUnderTest\IntroduceStaticSetter\**" />
+    <None Remove="BringMethodUnderTest\IntroduceStaticSetter\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="log4net" Version="2.0.14" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.0" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="PayPal" Version="1.9.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
@@ -20,11 +27,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="BringMethodUnderTest\ExtractAndOverride\Lab\" />
-    <Folder Include="BringMethodUnderTest\IntroduceStaticSetter\" />
   </ItemGroup>
 
 </Project>
