--- a/Dependencies/Dependencies.csproj
+++ b/Dependencies/Dependencies.csproj
@@ -29,4 +29,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="LegacyLibrary">
+      <HintPath>bin\Debug\netcoreapp3.1\LegacyLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
