--- a/Dependencies/Dependencies.csproj
+++ b/Dependencies/Dependencies.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.300.54" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="log4net" Version="2.0.14" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
